sandbox/output
StringCalculatorTest.java:39: error: incompatible types: String cannot be converted to Class<? extends Throwable>
    @Test(expected="Exception.class")
                   ^
1 error
